crates/cairn-lang-tree-sitter/test/corpus/theme.txt
==================
Bare theme with slots (field labels)
==================

theme medieval:
  slot floor -> @oak_planks
  slot wall -> @cobblestone

---

(source_file
  (theme_decl
    name: (identifier)
    body: (theme_body
      (slot_binding
        name: (identifier)
        target: (material_ref
          (identifier)))
      (slot_binding
        name: (identifier)
        target: (material_ref
          (identifier))))))

==================
Selector rule with attribute filter (field labels)
==================

theme medieval:
  window[class=small] -> frame=@spruce_wood

---

(source_file
  (theme_decl
    name: (identifier)
    body: (theme_body
      (selector_rule
        selector: (selector
          keyword: (identifier)
          filter: (selector_filter
            (filter_list
              (attribute
                key: (identifier)
                value: (identifier)))))
        bindings: (attribute_list
          (attribute
            key: (identifier)
            value: (material_ref
              (identifier))))))))

==================
Canonical token with a state literal
==================

theme t:
  slot log -> @oak_log[axis=x]
  slot step -> @oak_stairs[half=top, facing=north]

---

(source_file
  (theme_decl
    name: (identifier)
    body: (theme_body
      (slot_binding
        name: (identifier)
        target: (material_ref
          (identifier)
          (state_literal
            (state_property
              key: (identifier)
              value: (identifier)))))
      (slot_binding
        name: (identifier)
        target: (material_ref
          (identifier)
          (state_literal
            (state_property
              key: (identifier)
              value: (identifier))
            (state_property
              key: (identifier)
              value: (identifier))))))))

==================
Material with dotted path
==================

theme keep_dark:
  slot wall -> @wall.stone.cobble

---

(source_file
  (theme_decl
    (identifier)
    (theme_body
      (slot_binding
        (identifier)
        (material_ref
          (identifier)
          (identifier)
          (identifier))))))

==================
Theme without trailing colon
==================

theme minimal
  slot floor -> @stone

---

(source_file
  (theme_decl
    (identifier)
    (theme_body
      (slot_binding
        (identifier)
        (material_ref
          (identifier))))))

==================
Theme with no body
==================

theme empty:

---

(source_file
  (theme_decl
    (identifier)))

==================
A theme row with no bracket is not a selector
:error
==================

theme t:
  window.frame

---

==================
A selector's dotted tail is rejected
:error
==================

theme t:
  door[class=heavy].panel -> mat_slot=@oak

---

==================
A selector with no arrow is rejected
:error
==================

theme t:
  window[side=front]

---

==================
Empty filter, comma-separated filter, and no bindings
==================

theme t:
  window[] ->
  door[a=1, b=2] -> mat=@oak

---

(source_file
  (theme_decl
    (identifier)
    (theme_body
      (selector_rule
        (selector
          (identifier)
          (selector_filter)))
      (selector_rule
        (selector
          (identifier)
          (selector_filter
            (filter_list
              (attribute
                (identifier)
                (integer))
              (attribute
                (identifier)
                (integer)))))
        (attribute_list
          (attribute
            (identifier)
            (material_ref
              (identifier))))))))

==================
A slot target is any value, not only a material
==================

theme t:
  slot floor -> oak
  slot wall -> "cobble"
  slot pane -> 3

---

(source_file
  (theme_decl
    (identifier)
    (theme_body
      (slot_binding
        (identifier)
        (identifier))
      (slot_binding
        (identifier)
        (string))
      (slot_binding
        (identifier)
        (integer)))))

==================
A theme may declare a version floor of its own
==================

theme t:
  requires version>=1.21.4
  slot floor -> @oak_planks

---

(source_file
  (theme_decl
    (identifier)
    (theme_body
      (requires_stmt
        (directive_literal))
      (slot_binding
        (identifier)
        (material_ref
          (identifier))))))
